<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <ImageView
            android:src="@drawable/sudokulogo1"
            android:layout_width="120dp"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_registration"
            android:textSize="30sp"
            android:textAlignment="center" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/emailreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/passwordred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterPassword"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/buttonregister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register" />

        <TextView
            android:id="@+id/textgotolgoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginFromReg"
            android:textAlignment="center"
            android:onClick="goToLogin"/>

    </LinearLayout>
</LinearLayout>